# CUDA_JPEG

./: .gitignore  CMakeLists.txt  README.md
CV_CUDA_CODEC/: CMakeLists.txt  main.cpp  video_decoder.cpp  video_decoder.hpp
NPP_JPEG/: CMakeLists.txt  NPPJpegCoder.cpp  NPPJpegCoder.h  main.cpp
NVPipe/: CMakeLists.txt  main.cpp
NV_CODEC_JPEG/: CMakeLists.txt  FrameQueue.h  ImageDX.cpp  ImageDX.h  VideoDecoder.cpp  VideoDecoder.h  VideoParser.cpp  VideoParser.h  VideoSource.cpp  VideoSource.h  cudaProcessFrame.cpp  cudaProcessFrame.h  main.cpp
